--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     </div>
     <footer>
-        © 2024 Dirad. Todos os direitos reservados.
+        © 2024 Victor Duarte. Todos os direitos reservados.
     </footer>
     <script src="script.js"></script>
 </body>
